src/components/navbar/navbar.styles.css
/* .navbar ul li a:active {
  color: var(--color-yellow) !important;
} */

.navbar-toggler {
  color: green !important;
  border: 1px solid white !important;
}

.fa-brand {
  font-size: 2.3rem;
}

.active {
  color: var(--text-yellow) !important;
}

.brand-title {
  color: var(--color-grey-light-1) !important;
  /* background-color: var(--color-green-light) !important; */
  font-size: 22px !important;
}

@media (max-width: 415px) {
  .brand-title {
    display: none;
  }

  .navbar-brand {
    margin: 0 1rem;
  }
}

